--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "dev": "nodemon server.js",
+    "prisma:migrate": "prisma migrate dev",
+    "prisma:generate": "prisma generate"
   },
   "repository": {
     "type": "git",
@@ -17,19 +18,19 @@
     "url": "https://github.com/janmxx52/hotel-booking-api/issues"
   },
   "homepage": "https://github.com/janmxx52/hotel-booking-api#readme",
-  "description": "",
   "dependencies": {
     "@prisma/adapter-mariadb": "^7.1.0",
-    "@prisma/client": "^7.1.0",
+    "@prisma/client": "^6.19.1",
     "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "helmet": "^8.1.0",
-    "jsonwebtoken": "^9.0.3"
+    "jsonwebtoken": "^9.0.3",
+    "prisma": "^6.19.1"
   },
   "devDependencies": {
-    "nodemon": "^3.1.11",
-    "prisma": "^7.1.0"
-  }
+    "nodemon": "^3.1.11"
+  },
+  "description": ""
 }
